--- a/app/views/pages/display_mode.html.erb
+++ b/app/views/pages/display_mode.html.erb
@@ -3,13 +3,13 @@
 <div class="fr-display">
   <fieldset class="fr-fieldset">
     <legend class="fr-fieldset__legend--regular fr-fieldset__legend">
-      Choisissez un thème pour personnaliser l’apparence du site.
+      <%= t(".legend") %>
     </legend>
     <div class="fr-fieldset__element">
       <div class="fr-radio-group fr-radio-rich">
         <input value="light" type="radio" id="fr-radios-theme-light" name="fr-radios-theme">
         <label class="fr-label" for="fr-radios-theme-light">
-          Thème clair
+          <%= t(".light") %>
         </label>
         <div class="fr-radio-rich__pictogram">
           <svg aria-hidden="true" class="fr-artwork" viewBox="0 0 80 80" width="80px" height="80px">
@@ -24,7 +24,7 @@
       <div class="fr-radio-group fr-radio-rich">
         <input value="dark" type="radio" id="fr-radios-theme-dark" name="fr-radios-theme">
         <label class="fr-label" for="fr-radios-theme-dark">
-          Thème sombre
+          <%= t(".dark") %>
         </label>
         <div class="fr-radio-rich__pictogram">
           <svg aria-hidden="true" class="fr-artwork" viewBox="0 0 80 80" width="80px" height="80px">
@@ -39,8 +39,8 @@
       <div class="fr-radio-group fr-radio-rich">
         <input value="system" type="radio" id="fr-radios-theme-system" name="fr-radios-theme">
         <label class="fr-label" for="fr-radios-theme-system">
-          Système
-          <span class="fr-hint-text">Utilise les paramètres système</span>
+          <%= t(".system") %>
+          <span class="fr-hint-text"><%= t(".system_hint") %></span>
         </label>
         <div class="fr-radio-rich__pictogram">
           <svg aria-hidden="true" class="fr-artwork" viewBox="0 0 80 80" width="80px" height="80px">
