--- a/app/views/sites/_site.html.erb
+++ b/app/views/sites/_site.html.erb
@@ -15,13 +15,10 @@
     <% end %>
   </td>
   <td>
-    <% if checked_at = site.audit.checked_at %>
-      <% local_time = checked_at.in_time_zone %>
-      <%= time_tag local_time, l(local_time, format: :compact), title: l(local_time, format: :long) %>
-      <br>
-      (<%= time_ago local_time %>)
-    <% else %>
-      <%= Audit.human("audit/status.pending") %>
-    <% end %>
+    <% checked_at = site.audit.checked_at || site.audit.updated_at %>
+    <% local_time = checked_at.in_time_zone %>
+    <%= time_tag local_time, l(local_time, format: :compact), title: l(local_time, format: :long) %>
+    <br>
+    (<%= time_ago local_time %>)
   </td>
 </tr>
